--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.28.11",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
