--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   "license": "ISC",
   "homepage": "https://github.com/meatbags/galleria#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.2",
+    "@babel/core": "^7.4.4",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.1",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-loader": "^2.1.6",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.5"
-  }
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-preset": "^0.2.0",
+    "webpack-preset-babel": "^0.2.0"
+  },
+  "dependencies": {}
 }
